--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     },
     "dependencies": {
         "@hapi/joi": "^17.1.1",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-promise-router": "^4.1.0",
-        "mongoose": "^5.13.7"
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.13.7",
+        "passport": "^0.4.1",
+        "passport-facebook-token": "^4.0.0",
+        "passport-google-plus-token": "^2.1.0",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0"
     },
     "devDependencies": {
         "morgan": "^1.10.0",
